bundles/typical/inc/os/FreeRTOS.nim


proc xQueueGenericSend*(xQueue: QueueHandle_t; pvItemToQueue: pointer;
                       xTicksToWait: TickType_t; xCopyPosition: BaseType_t): BaseType_t {.
    importc: "xQueueGenericSend", header: "FreeRTOSNim.h".}
proc xQueueReceive*(xQueue: QueueHandle_t; pvBuffer: pointer;
                   xTicksToWait: TickType_t): BaseType_t {.
    importc: "xQueueReceive", header: "FreeRTOSNim.h".}
proc xQueueGenericSendFromISR*(xQueue: QueueHandle_t; pvItemToQueue: pointer;
                              pxHigherPriorityTaskWoken: ptr BaseType_t;
                              xCopyPosition: BaseType_t): BaseType_t {.
    importc: "xQueueGenericSendFromISR", header: "FreeRTOSNim.h".}
proc xQueueGiveFromISR*(xQueue: QueueHandle_t;
                       pxHigherPriorityTaskWoken: ptr BaseType_t): BaseType_t {.
    importc: "xQueueGiveFromISR", header: "FreeRTOSNim.h".}
proc xQueueSemaphoreTake*(xQueue: QueueHandle_t; xTicksToWait: TickType_t): BaseType_t {.
    importc: "xQueueSemaphoreTake", header: "FreeRTOSNim.h".}
proc xQueueGenericCreate*(uxQueueLength: UBaseType_t; uxItemSize: UBaseType_t;
                         ucQueueType: uint8): QueueHandle_t {.
    importc: "xQueueGenericCreate", header: "FreeRTOSNim.h".}
proc xQueueGenericCreateStatic*(uxQueueLength: UBaseType_t;
                               uxItemSize: UBaseType_t;
                               pucQueueStorage: ptr uint8;
                               pxStaticQueue: ptr StaticQueue_t; ucQueueType: uint8): QueueHandle_t {.
    importc: "xQueueGenericCreateStatic", header: "FreeRTOSNim.h".}
proc vQueueWaitForMessageRestricted*(xQueue: QueueHandle_t;
                                    xTicksToWait: TickType_t;
                                    xWaitIndefinitely: BaseType_t) {.
    importc: "vQueueWaitForMessageRestricted", header: "FreeRTOSNim.h".}
proc xQueueGenericReset*(xQueue: QueueHandle_t; xNewQueue: BaseType_t): BaseType_t {.
    importc: "xQueueGenericReset", header: "FreeRTOSNim.h".}
proc xTaskCreate*(pxTaskCode: TaskFunction_t; pcName: cstring;
                 usStackDepth: configSTACK_DEPTH_TYPE; pvParameters: pointer;
                 uxPriority: UBaseType_t; pxCreatedTask: ptr TaskHandle_t): BaseType_t {.
    importc: "xTaskCreate", header: "FreeRTOSNim.h".}
  ## lint !e971 Unqualified char types are allowed for strings and single characters only.
proc xTaskCreateStatic*(pxTaskCode: TaskFunction_t; pcName: cstring;
                       ulStackDepth: uint32; pvParameters: pointer;
                       uxPriority: UBaseType_t; puxStackBuffer: ptr StackType_t;
                       pxTaskBuffer: ptr StaticTask_t): TaskHandle_t {.
    importc: "xTaskCreateStatic", header: "FreeRTOSNim.h".}
  ## lint !e971 Unqualified char types are allowed for strings and single characters only.
proc vTaskDelay*(xTicksToDelay: TickType_t) {.importc: "vTaskDelay",
    header: "FreeRTOSNim.h".}
proc vTaskStartScheduler*() {.importc: "vTaskStartScheduler",
                            header: "FreeRTOSNim.h".}
proc vTaskSuspendAll*() {.importc: "vTaskSuspendAll", header: "FreeRTOSNim.h".}
proc xTaskResumeAll*(): BaseType_t {.importc: "xTaskResumeAll",
                                  header: "FreeRTOSNim.h".}
proc xTaskGetTickCount*(): TickType_t {.importc: "xTaskGetTickCount",
                                     header: "FreeRTOSNim.h".}
proc xTaskIncrementTick*(): BaseType_t {.importc: "xTaskIncrementTick",
                                      header: "FreeRTOSNim.h".}
proc vTaskPlaceOnEventList*(pxEventList: ptr List_t; xTicksToWait: TickType_t) {.
    importc: "vTaskPlaceOnEventList", header: "FreeRTOSNim.h".}
proc vTaskPlaceOnEventListRestricted*(pxEventList: ptr List_t;
                                     xTicksToWait: TickType_t;
                                     xWaitIndefinitely: BaseType_t) {.
    importc: "vTaskPlaceOnEventListRestricted", header: "FreeRTOSNim.h".}
proc xTaskRemoveFromEventList*(pxEventList: ptr List_t): BaseType_t {.
    importc: "xTaskRemoveFromEventList", header: "FreeRTOSNim.h".}
proc vTaskSwitchContext*() {.importc: "vTaskSwitchContext", header: "FreeRTOSNim.h".}
proc xTaskCheckForTimeOut*(pxTimeOut: ptr TimeOut_t; pxTicksToWait: ptr TickType_t): BaseType_t {.
    importc: "xTaskCheckForTimeOut", header: "FreeRTOSNim.h".}
proc vTaskMissedYield*() {.importc: "vTaskMissedYield", header: "FreeRTOSNim.h".}
proc xTaskGetSchedulerState*(): BaseType_t {.importc: "xTaskGetSchedulerState",
    header: "FreeRTOSNim.h".}
proc xTaskPriorityInherit*(pxMutexHolder: TaskHandle_t): BaseType_t {.
    importc: "xTaskPriorityInherit", header: "FreeRTOSNim.h".}
proc xTaskPriorityDisinherit*(pxMutexHolder: TaskHandle_t): BaseType_t {.
    importc: "xTaskPriorityDisinherit", header: "FreeRTOSNim.h".}
proc vTaskPriorityDisinheritAfterTimeout*(pxMutexHolder: TaskHandle_t;
    uxHighestPriorityWaitingTask: UBaseType_t) {.
    importc: "vTaskPriorityDisinheritAfterTimeout", header: "FreeRTOSNim.h".}
proc vTaskStepTick*(xTicksToJump: TickType_t) {.importc: "vTaskStepTick",
    header: "FreeRTOSNim.h".}
proc eTaskConfirmSleepModeStatus*(): eSleepModeStatus {.
    importc: "eTaskConfirmSleepModeStatus", header: "FreeRTOSNim.h".}
proc pvTaskIncrementMutexHeldCount*(): TaskHandle_t {.
    importc: "pvTaskIncrementMutexHeldCount", header: "FreeRTOSNim.h".}
proc vTaskInternalSetTimeOutState*(pxTimeOut: ptr TimeOut_t) {.
    importc: "vTaskInternalSetTimeOutState", header: "FreeRTOSNim.h".}
proc xTimerCreate*(pcTimerName: cstring; xTimerPeriodInTicks: TickType_t;
                  uxAutoReload: UBaseType_t; pvTimerID: pointer;
                  pxCallbackFunction: TimerCallbackFunction_t): TimerHandle_t {.
    importc: "xTimerCreate", header: "FreeRTOSNim.h".}
  ## lint !e971 Unqualified char types are allowed for strings and single characters only.
proc xTimerCreateStatic*(pcTimerName: cstring; xTimerPeriodInTicks: TickType_t;
                        uxAutoReload: UBaseType_t; pvTimerID: pointer;
                        pxCallbackFunction: TimerCallbackFunction_t;
                        pxTimerBuffer: ptr StaticTimer_t): TimerHandle_t {.
    importc: "xTimerCreateStatic", header: "FreeRTOSNim.h".}
  ## lint !e971 Unqualified char types are allowed for strings and single characters only.
proc pvTimerGetTimerID*(xTimer: TimerHandle_t): pointer {.
    importc: "pvTimerGetTimerID", header: "FreeRTOSNim.h".}
proc xTimerCreateTimerTask*(): BaseType_t {.importc: "xTimerCreateTimerTask",
    header: "FreeRTOSNim.h".}
proc xTimerGenericCommand*(xTimer: TimerHandle_t; xCommandID: BaseType_t;
                          xOptionalValue: TickType_t;
                          pxHigherPriorityTaskWoken: ptr BaseType_t;
                          xTicksToWait: TickType_t): BaseType_t {.
    importc: "xTimerGenericCommand", header: "FreeRTOSNim.h".}
proc pxPortInitialiseStack*(pxTopOfStack: ptr StackType_t; pxCode: TaskFunction_t;
                           pvParameters: pointer): ptr StackType_t {.
    importc: "pxPortInitialiseStack", header: "FreeRTOSNim.h".}
proc pvPortMalloc*(xSize: csize): pointer {.importc: "pvPortMalloc",
                                        header: "FreeRTOSNim.h".}
proc vPortFree*(pv: pointer) {.importc: "vPortFree", header: "FreeRTOSNim.h".}
proc xPortStartScheduler*(): BaseType_t {.importc: "xPortStartScheduler",
                                       header: "FreeRTOSNim.h".}

const tmrCOMMAND_START = cast[BaseType_t](1)
const tmrCOMMAND_RESET = cast[BaseType_t](2)
const tmrCOMMAND_STOP = cast[BaseType_t](3)

template xTimerReset*(xTimer: TimerHandle_t, xTicksToWait: uint32): BaseType_t =
  xTimerGenericCommand(xTimer, tmrCOMMAND_RESET, xTaskGetTickCount(), nil, xTicksToWait)

template xTimerStop*(xTimer: TimerHandle_t, xTicksToWait: uint32): BaseType_t =
  xTimerGenericCommand(xTimer, tmrCOMMAND_STOP, 0, nil, xTicksToWait)